[tool.poetry]
name = "intelmo"
version = "0.1.0"
description = ""
authors = ["Chunxu Yang <chunxuyang@ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
newspaper3k = "^0.2.8"
nltk = "^3.8.1"
feedparser = "^6.0.10"
pydantic = "^2.3.0"
bigtree = "^0.12.3"
nicegui = "^1.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
